<resources>
    <string name="app_name">Pretty Printed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_email">Email</string>
    <string name="btn_next">Next</string>
    <string name="btn_log_in_account">Log in Account</string>
    <string name="btn_register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="tv_register_new_account">Register new Account</string>
    <string name="todo">TODO</string>
    <string name="dashboard">Dashboard</string>
    <string name="project">project</string>
    <string name="message">message</string>
    <string name="profile">profile</string>
    <string name="create_new_project">     Create new Project    </string>
    <string name="create_task">Create task</string>
    <string name="name">Name task</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="enter_name_project">Enter name project</string>
    <string name="assignee">Assignee</string>
    <string name="tv_project">Project</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="select">Select</string>
    <string name="open">Open</string>
    <string name="in_progress">In progress</string>
<!--    <string name="fix">Fix</string>-->
    <string name="won_t_fix">Won`t fix</string>
    <string name="bug">Bug</string>
    <string name="feature">Feature</string>
    <string name="question">Question</string>
    <string name="priority">Priority</string>
    <string name="minor">Minor</string>
<!--    <string name="normal">Normal</string>-->
    <string name="major">Major</string>
    <string name="critical">Critical</string>
    <string name="tv_user_name">Ilgam Khasanov</string>
    <string name="first_project">First project</string>
    <string name="normal">Normal</string>
    <string name="fix">Fix</string>
</resources>